[package]
name = "profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
ywt = { git = "https://github.com/tdooms/ywt.git" }
api = { path = "../../api", features = ["auth"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa"] }

yew-router = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
validator = { version = "0.16", features = ["derive"] }
wasm-bindgen-futures = "0.4"

log = "0.4"
