[package]
name = "profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
api = { path = "../../api", features = ["auth"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa"] }

yew-router = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "32b3150cb3711c4e03105eec9659a72aa8ce7a8c" }
validator = { version = "0.16", features = ["derive"] }
wasm-bindgen-futures = "0.4"

log = "0.4"
