[package]
name = "profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
api = { path = "../../api", features = ["auth"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["fa"] }

yew = "0.20"
yew-router = "0.17"
validator = { version = "0.16", features = ["derive"] }
wasm-bindgen-futures = "0.4"

tracing = "0.1"
