[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api", features=["auth"] }

yew-router = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996" }
ywt = { git = "https://github.com/tdooms/ywt.git" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4.2"

serde = { version = "1.0", features = ["derive"] }
gloo = "0.8"
log = "0.4"
derive_more = "0.99"
futures = "0.3"
thiserror = "1.0"
validator = "0.16"

js-sys = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }

