[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api", features = ["auth"] }

yew-router = "0.17"
yew = "0.20"
cobul = { git = "https://github.com/tdooms/cobul.git" }

tracing = "0.1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }
js-sys = "0.3"

serde = { version = "1.0", features = ["derive"] }
gloo = "0.8"
derive_more = "0.99"
futures = "0.3"
thiserror = "1.0.36"
validator = "0.16"
chrono = { version = "0.4", features = ["wasmbind"] }



