[package]
name = "frontend"
version = "0.1.0"
authors = ["thomas <thomas@dooms.eu>"]
edition = "2018"
description = "a wasm frontend for the pixelguesser game"
repository = "https://github.com/Funkymaniac/pixelguesser"
license = "GNU GPLv3"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared = { path = "../../backend/shared" }
graphql = { path = "../../backend/graphql" }

pbs = { path = "../styles/pbs" }
cbs = { path = "../styles/cbs" }

chrono = { version = "0.4", features = ["serde"] }

strum = "0.21"

log = "0.4"
wasm-logger = "0.2"
wee_alloc = "0.4"

thiserror = "1.0"

yew = { git = "https://github.com/yewstack/yew.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew-agent = { git = "https://github.com/yewstack/yew.git" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4"

web-sys = { version = "0.3", features = ["HtmlCanvasElement", "HtmlImageElement", "CanvasRenderingContext2d", "HtmlDivElement", "Blob", "Url"] }
js-sys = "0.3"

gloo = "0.3"
base64 = "0.13"

futures = "0.3"
validator = { version = "0.12", features = ["derive"] }
reqwasm = "0.2.1"
