[package]
name = "fa-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
convert_case = "0.4"